--- a/README.asciidoc
+++ b/README.asciidoc
@@ -78,7 +78,7 @@ CobiGen deployment has to be distinguished threefold
 
 |  `cobigen/cobigen-core/`,`cobigen-maven/` | MAVEN | `mvn clean deploy`
 
-|  `cobigen/cobigen-*/` (except core) | ECLIPSE | ```# Builds the Manifest and bundles the dependencies
+|  `cobigen/cobigen-*/` (except core). In case of deploying dev_javaplugin or dev_openapiplugin, go to `cobigen/cobigen-*-parent/cobigen-*`| ECLIPSE | ```# Builds the Manifest and bundles the dependencies
 mvn clean package bundle:bundle -Pp2-bundle
 # Uses the created bundle and builds a p2 update site for it. Do NOT use clean
 mvn install bundle:bundle -Pp2-bundle,p2-build-mars,p2-build-experimental p2:site
