Tutorial on how to debug with Maven

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -89,6 +89,19 @@ mvn deploy -Pp2-build-mars,p2-build-experimental -Dp2.upload=experimental
 | `cobigen-eclipse/` | ECLIPSE | `mvn clean deploy -Pp2-build-mars,p2-build-experimental -Dp2.upload=experimental`
 |===
 
+== Debugging with Maven
+
+To debug Maven builds on any plug-in:
+
+. Step into the plug-in and start a console there.
+. Run `mvnDebug clean install`, it will output the port the debugger is listening to.
+. On Eclipse, right click your project -> Debug as -> Debug Configurations...
+. Add a new Remote Java Application that connects on a socket on the port that was outputted by Maven.
+. Hit debug and have fun!
+
+To debug Maven tests follow https://doc.nuxeo.com/corg/how-to-debug-a-test-run-with-maven/[this link]
+
+
 == Contribute
 
 https://github.com/devonfw/tools-cobigen/blob/master/.github/CONTRIBUTING.md[See the contribution guidelines]
