--- a/documentation/cobigen-openapiplugin.asciidoc
+++ b/documentation/cobigen-openapiplugin.asciidoc
@@ -3,12 +3,14 @@ toc::[]
 
 = OpenApi Plug-in
 
-The OpenApi Plug-in enables the support for Swagger files that follows the OpenApi 3.0 standard as input for CobiGen. Until now, CobiGen was thought to follow a "code first" generation, with this plugin, now it can also the "contract first" strategy
+The OpenApi Plug-in enables the support for Swagger files that follows the OpenApi 3.0 standard as input for CobiGen. Until now, CobiGen was thought to follow a "code first" generation, with this plugin, now it can also follow the "contract first" strategy
 
 * *Code First*
 ** Generating from a file with code (Java/XML code in our case)
 * *Contract First*
 ** Generation from a full definition file (Swagger in this case). This file contains all the information about entities, operations, etc...
+
+NOTE: If you are not a CobiGen developer, you will be more interested in <<Usage, usage>>.
 
 == Trigger Extensions
 
@@ -75,11 +77,11 @@ As you will see on the figure below, there are two types of variables: The globa
 on the 'info' part of the file, and the local ones, that are defined inside each entity.
 
 Therefore, if you want to define the root package, then you will have to declare it on the 'info' part.
-That way, all your entities will be generated under the same root package.
+That way, all your entities will be generated under the same root package (e.g. com.devonfw.project).
 
 image:images/howtos/openapi-gen/extensionPropertyFile.png[Swagger at devon4j Project, height="520",link="images/howtos/openapi-gen/extensionPropertyFile.png"]
 
-If no extension with that name was found, then an empty string will be assigned.
+If no extension with that name was found, then an empty string will be assigned. In the case of not defining the root package, then the code will be generated into `src/main/java`.
 
 * type 'property' -> property of the Java Object
 +
@@ -175,8 +177,9 @@ The Cobigen OpenApi Plug-in implements an input reader for OpenApi 3.0 files. Th
 ** *unidirectional* ('boolean' :: *true* if the relationship is unidirectional, false by default)
 
 * *PathDef* ('Map<String, Object>' :: common element structure)
-** *pathURI* ('String' :: Uri of the path)
+** *rootComponent* ('String' :: the first segment of the path)
 ** *version* ('String' :: version of the service)
+** *pathURI* ('String' :: URI of the path, the segment after the version)
 ** *operations* ('List<OperationDef>' :: List of operations for this path)
 
 * *OperationDef* ('Map<String, Object>' :: common element structure)
@@ -235,7 +238,7 @@ The Swagger file must be at the core folder of your devon4j project, like shown 
 
 image:images/howtos/openapi-gen/openapi_howto1.png[Swagger at devon4j Project, width="450",link="images/howtos/openapi-gen/openapi_howto1.png"]
 
-To be compatible with CobiGen and devon4j, it must follow some specific configurations. This configurations also allows to avoid redundant definitions as SearchCriterias and PaginatedList objects are used at the services definitions.
+To be compatible with CobiGen and devon4j, it must follow some specific configurations. This configurations allows us to avoid redundant definitions as SearchCriterias and PaginatedList objects are used at the services definitions.
 
 [[paths]]
 === Paths
@@ -265,6 +268,8 @@ To be compatible with CobiGen and devon4j, it must follow some specific configur
         - searchCriteria
         - paginated
 ```
+
+That way, CobiGen will be able to generate the endpoint (REST service) `customOperation` on `componentmanagement`. If you do not specify the component to generate to (the `x-component` tag) then this service will not be taken into account for generation.
 
 [[service]]
 === Service based generation
