--- a/documentation/guide_dev_troubleshooting.asciidoc
+++ b/documentation/guide_dev_troubleshooting.asciidoc
@@ -54,7 +54,7 @@ Please note the message `Not authorized , ReasonPhrase: Unauthorized. -> [Help 2
 To test changes implemented on the `cobigen-core` you have to follow the next process:
 
 1. Open a console and step into `cobigen/cobigen-core-parent`. Run `mvn clean install` and remember the jar version you have just installed.
-2. Open a console and step into `cobigen/cobigen-eclipse`. Run `mvn clean package -Pp2-build-mars`.
+2. Open a console and step into `cobigen/cobigen-eclipse`. Run `mvn clean package -Pp2-build-mars,p2-build-stable,p2-build-experimental`.
 3. On Eclipse, go to `cobigen/cobigen-eclipse` pom.xml and change the `<version>` of your cobigen-core.
 4. Also check on the `cobigen/cobigen-core-parent` pom-xml that it is using the just installed version.
 5. On Eclipse, go to `cobigen/cobigen-eclipse` and double-click 'plugins.xml'. On the bottom, click on 'runtime' tab. On 'classpath', add a new library and choose the jars you have just installed.
